# slog

./: Cargo.toml  README.md
migrations/: 20250201165559_1_create_sleep_table.sql  20251125112248_add_notes_column.sql
src/: config.rs  main.rs  sheets.rs
