[package]
name = "sleep_log"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
inquire = { version = "0.7.5", features = ["date"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version= "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }
