[package]
name = "slog"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
google-sheets4 = "5.0"
hyper = "0.14"
hyper-rustls = "0.24"
inquire = { version = "0.7.5", features = ["date"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version= "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }
yup-oauth2 = "8.0"
